--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,12 @@
 @import "mixins";
 
 @import "global/base";
+@import "global/slider";
 
 @import "blocks/page-header";
 @import "blocks/main-nav";
+@import "blocks/stats";
+@import "blocks/advantages";
+@import "blocks/news";
+@import "blocks/reviews";
+@import "blocks/page-footer";
